--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="conatiner">
         <header>
             <div class="logo">
-                <a href="index.html"><img src="../task-tesla_landing&nav_page/images/tesla-logo-png-2244.png" alt="tesla"></a>
+                <a href="index.html"><img src="../images/tesla-logo-png-2244.png" alt="tesla"></a>
             </div>
             <nav id="list_1">
                 <ul >
